# 2QBF-solver

./: CMakeLists.txt  main.cpp  sat100.cnf
Formulas/: AndFormula.cpp  AndFormula.h  ClauseVar.cpp  ClauseVar.h  Formula.cpp  Formula.h  FormulaHelper.h  NotFormula.cpp  NotFormula.h  OrFormula.cpp  OrFormula.h  VarFormula.cpp  VarFormula.h
